--- a/PopulationSimulator/.classpath
+++ b/PopulationSimulator/.classpath
@@ -12,5 +12,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/xchart-3.6.1/xchart-demo-3.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
