Fixed Saving and Loading

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ PopulationSimulator/.settings/org.eclipse.jdt.core.prefs
 *.dna
 PopulationSimulator/res/chart.dna
 PopulationSimulator/res/chart.dna
+*.dna
